--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
+*.class
+*.jar
+*.iml
+*.sw?
+.idea/
+.lein-deps-sum
+.lein-failures
+.lein-plugins/
+.lein-repl-history
+.nrepl-port
+.lein-*
+.nrepl-port
+checkouts/
+classes/
+lib/
+target/
 pom.xml
 pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
